--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.7.2
 Django==4.2.7
+django-phonenumber-field==7.2.0
 djangorestframework==3.14.0
+phonenumbers==8.13.26
 pytz==2023.3.post1
 sqlparse==0.4.4
